# SMTParser

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  LICENSE  README.md  base_parser.cpp  build.sh  build_python.sh  dag.cpp  dag.h  kind.cpp  kind.h  llm.sh  objective.cpp  objective.h  op_parser.cpp  options.h  setup.py  sort.h  tmp  util.cpp  util.h
.config/: default.conf.example  llm.conf.example
.github/workflows/: ci.yml  doxygen.yml
apps/: main.cpp  main.h
apps/config/: config_loader.cpp  config_loader.h  default.conf.example  llm.conf
apps/features/: run_features.cpp  run_features.h
apps/nl2smt/: README.md  demo_nl2smt.cpp  llm_call.py  llm_caller.cpp  llm_caller.h  mock_llm.sh  nl2smt.cpp  nl2smt.h  prompt.txt  prompt_emit.txt  prompt_plan.txt  prompt_repair.txt  run_nl2smt.cpp  run_nl2smt.h  run_nl2smt.py  test_nl2smt.cpp
apps/parser/: run_parser.cpp  run_parser.h
apps/solver/: run_solver.cpp  run_solver.h
docs/: CMakeCXXCompilerId_8cpp.html  base__parser_8cpp.html  build_2include_2dag_8h__dep__incl.map  build_2include_2kind_8h.html  build_2include_2kind_8h__incl.md5  build_2include_2kind_8h_source.html  build_2include_2model_8h.html  build_2include_2model_8h__incl.md5  build_2include_2number_8h__dep__incl.map  build_2include_2number_8h__incl.md5  build_2include_2number_8h_source.html  build_2include_2objective_8h__dep__incl.md5  build_2include_2objective_8h__incl.map  build_2include_2options_8h__dep__incl.map  build_2include_2options_8h__incl.map  build_2include_2options_8h__incl.md5  build_2include_2parser_8h.html  build_2include_2parser_8h_source.html  build_2include_2sort_8h.html  build_2include_2sort_8h__dep__incl.map  build_2include_2sort_8h__incl.md5  build_2include_2sort_8h_source.html  build_2include_2util_8h.html  build_2include_2util_8h__dep__incl.md5  build_2include_2util_8h__incl.map  build_2include_2util_8h__incl.md5  build_2include_2util_8h_source.html  classSMTLIBParser_1_1DAGNode-members.html  classSMTLIBParser_1_1DAGNode.html  classSMTLIBParser_1_1GlobalOptions-members.html  classSMTLIBParser_1_1HighPrecisionInteger-members.html  classSMTLIBParser_1_1HighPrecisionReal-members.html  classSMTLIBParser_1_1HighPrecisionReal.html  classSMTLIBParser_1_1MetaObjective.html  classSMTLIBParser_1_1MetaObjective__inherit__graph.map  classSMTLIBParser_1_1MetaObjective__inherit__graph.md5  classSMTLIBParser_1_1Number.html  classSMTLIBParser_1_1Parser-members.html  classSMTLIBParser_1_1Parser.html  classSMTLIBParser_1_1SHA256-members.html  (+116 more)
docs/html/: README_8md.html  annotated.html  base__parser_8cpp__incl.map  base__parser_8cpp__incl.md5  build_2include_2dag_8h.html  build_2include_2dag_8h__dep__incl.md5  build_2include_2dag_8h__incl.map  build_2include_2dag_8h__incl.md5  build_2include_2dag_8h_source.html  build_2include_2kind_8h__dep__incl.map  build_2include_2kind_8h__dep__incl.md5  build_2include_2kind_8h__incl.map  build_2include_2model_8h__dep__incl.map  build_2include_2model_8h__dep__incl.md5  build_2include_2model_8h__incl.map  build_2include_2model_8h_source.html  build_2include_2number_8h.html  build_2include_2options_8h.html  (+146 more)
include/: Interval.h  app_config.h  asserting.h  common.h  context.h  dag.h  interval.h  kind.h  model.h  nl2smt.h  node.h  number.h  objective.h  op_dispatcher.h  op_utils.h  options.h  parser.h  rewriter.h  smt_interval.h  sort.h  symbol_manager.h  timing.h  util.h  value.h  visitor.h
python_binding/: README.md  example.py  smtparser_py.cpp
src/: app_config.cpp  base_parser.cpp  context.cpp  conv_parser.cpp  dag.cpp  eval_parser.cpp  expr_parser.cpp  icp_evaluation.cpp  icp_interval.cpp  interval.cpp  kind.cpp  model.cpp  nl2smt.cpp  number.cpp  objective.cpp  op_parser.cpp  opt_parser.cpp  rewriter.cpp  simp_parser.cpp  smt_interval.cpp  sort.cpp  sort.h  symbol_manager.cpp  util.cpp  value.cpp  visitor.cpp
test/: CMakeLists.txt  run_all_tests.sh  run_and_del.sh  run_instances.sh  run_tests.sh  test_arithmetic.cpp  test_array_simplify.cpp  test_array_theory.cpp  test_bitvector.cpp  test_boolean_logic.cpp  test_context_dispatcher.cpp  test_error.cpp  test_expressions.cpp  test_floating_point.cpp  test_functions.cpp  test_node_api.cpp  test_optimization.cpp  test_options_config.cpp  test_parse_model.cpp  test_parser.cpp  test_quantifiers.cpp  test_readme.cpp  test_rewriter.cpp  test_smtparser_exe.cpp  test_string_handling.cpp  test_string_operations.cpp  test_theory_combination.cpp  test_umbrella.cpp  test_visitor_api.cpp  tmp.smt2
test/FP/: FloatingPoint.smt2  test_debug_args_order.cpp
test/instances/: MulliganEconomicsModel0001c.smt2  MulliganEconomicsModel0078c.smt2  array_test.smt2  ax.smt2  bench_2529.smt2  bitvector_test.smt2  bv.smt2  complex_test.smt2  counterexample.dump.ia32_Mul_base_disp--Add32.load32.Mul32.Mulh_u32.0005.smt2  dualexecution.t1.i12.1b1ab8e0.smt2  edge_cases.smt2  error_unknown_symbol.smt2  fp.smt2  functions.smt2  hard-ll.c_3.smt2  identifiers.smt2  invalid_test.smt2  let.smt2  nested.smt2  numeral_vs_symbol.smt2  reals.smt2  simple_test.smt2  sin-cos-346-b-chunk-0326.smt2  strings.smt2  symbols.smt2  synthesis.dump.ia32_RorMem_base_index_scale_disp2--Add32.Add32.Add32.Add32.load32.Or32.Or32.store32.am_shl32.0001.smt2  whitespace.smt2
test/nl/: run_cases.sh
test/nl/expected/: 01_simple_int_bounds.smt2  02_simple_real_positive.smt2  03_two_vars_linear.smt2  04_and_three_constraints.smt2  05_or_constraint.smt2  06_minimize_single_var.smt2  07_maximize_single_var.smt2  08_implication.smt2  09_equality_two_vars.smt2  10_and_or_combined.smt2  11_not_constraint.smt2  12_three_vars_sum_le.smt2  13_minimize_sum.smt2  14_single_assert_lower_bound.smt2  15_real_equation.smt2  README.txt
test/nl/inputs/: 01_simple_int_bounds.nl  02_simple_real_positive.nl  03_two_vars_linear.nl  04_and_three_constraints.nl  05_or_constraint.nl  06_minimize_single_var.nl  07_maximize_single_var.nl  08_implication.nl  09_equality_two_vars.nl  10_and_or_combined.nl  11_not_constraint.nl  12_three_vars_sum_le.nl  13_minimize_sum.nl  14_single_assert_lower_bound.nl  15_real_equation.nl
(+151 files in other folders)
